--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{../css/recipe.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="header">
@@ -136,8 +137,38 @@
         </div>
     </div>
     <div class="addRatingField">
-
         <div class="ratingField">
+            <div class="star-icon">
+                <input type="radio" name="rating" id="rating1">
+                <label for="rating1" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating2">
+                <label for="rating2" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating3">
+                <label for="rating3" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating4">
+                <label for="rating4" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating5">
+                <label for="rating5" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating6">
+                <label for="rating6" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating7">
+                <label for="rating7" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating8">
+                <label for="rating8" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating9">
+                <label for="rating9" class="fa fa-star"></label>
+
+                <input type="radio" name="rating" id="rating10">
+                <label for="rating10" class="fa fa-star"></label>
+            </div>
         </div>
         <div class="confirmation">
             <img th:src="@{images/tick.svg}" src="../../static/images/tick.svg" alt = "quill" class = "tick">
