--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -75,7 +75,14 @@ body {
     border-radius: 50%;
 }
 
-.user-container:hover, .heart-container:hover {
+.heart-container:hover {
+    cursor: not-allowed;
+    background-color: #733506;
+    width: 4.6vw;
+    height: 9.2593vh;
+}
+
+.user-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
