added insignificant changes

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -14,7 +14,8 @@ body {
     padding-right: 2.083vw;
     padding-left: 4.166vw;
 }
-.logo1 {
+
+.logo {
     width: 6.25vw;
     height: 10vh;
     top: 0.3vw;
@@ -38,7 +39,6 @@ body {
     border: none;
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.5vh;
     font-size: 2.5vw;
     border-radius: 5.5vh;
     outline: none;
@@ -59,7 +59,6 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vh;
     font-size: 1.25vw;
     text-decoration: none;
 }
@@ -121,7 +120,6 @@ body {
     height: 39vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
-    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
     padding-left: 0.2605vw;
@@ -237,8 +235,7 @@ ul hr {
     width: 8.4375vw;
     height: 4.2593vh;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 4.2593vh;
@@ -269,21 +266,18 @@ ul hr {
     top: 14.6vh;
     bottom: 8vh;
     border-radius: 5.5vh;
+    padding-left: 1.5vw;
     background-color: #F2E3B3;
 }
 
 .ol{
     position: absolute;
-    width: 80vw;
-    height: 76vh;
+    width: 79vw;
+    height: 74vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
-    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-left: 0.2605vw;
-    margin-top: 1vh;
-    overflow: auto;
 }
 
 .ol ol {
@@ -304,7 +298,6 @@ ul hr {
 .ol::-webkit-scrollbar-thumb {
     background: #733506;
     border-radius: 50px;
-    right: 50vw;
 }
 
 .h2{
@@ -509,8 +502,7 @@ ul hr {
     width: 21vw;
     height: 3vh;
     margin: auto;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 1vh;
@@ -519,27 +511,4 @@ ul hr {
 }
 
 
-.copyrightm {
-    position: absolute;
-    left: 240px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
 
-    color: #000000;
-}
-
-.copyrightf {
-    position: absolute;
-    left: 410px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-    color: #000000;
-}
