added insignificant changes

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -84,6 +84,11 @@ body {
     height: 5.55555555vh;
     width: 3.125vw;
 }
+
+a:visited, a:link {
+    color: initial;
+    text-decoration: none;
+}
 /*____________________________________________________________________________________________________________________*/
 
 .container {
