--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -73,37 +73,26 @@
     </div>
     <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
     <div class="mainField">
-        <div class="field ">
+        <div class="field">
             <div class="ol">
-                <ol>
-                    <li> <div class="smallerField">
-                        <table th:each="recipe: ${recipes}">
-                            <tr>
-                                <td th:text="${recipe.getCategory().getTitle()}"></td>
-                            </tr>
-
-                            <tr>
+                <div th:each="recipe, i : ${recipes}" th:class="'smallerField smallerField-down' + (${i.index} + 1)">
+                    <table>
+                        <tr>
+                            <th th:text="${recipe.getCategory().getTitle()}"></th>
+                        </tr>
+                        <tr>
+                            <td>
                                 <a th:href="@{/recipe/{id}(id=${recipe.getId()})}" th:text="${recipe.getTitle()}"></a>
-                                <td th:text="${recipe.getCookingTime()}+' minutes'"></td>
-                            </tr>
-                            <tr>
-                                <td th:text="${recipe.getAverageMark()}">
-                                </td>
-                            </tr>
-                        </table>
-<!--                        <p class="h2-down"> Categories  </p>-->
-<!--                        <p class="h2-right">Time for cooking   </p>-->
-<!--                        <p class="h2-right"> 4.5</p>-->
-                    </div>
-                    </li>
-                    <li><div class="smallerField smallerField-down1 "></div></li>
-                    <li><div class="smallerField smallerField-down2 "></div></li>
-                    <li><div class="smallerField smallerField-down3 "></div></li>
-                    <li><div class="smallerField smallerField-down4 "></div></li>
-                </ol>
+                            </td>
+                            <td th:text="${recipe.getCookingTime()} + ' minutes'"></td>
+                            <td th:text="${recipe.getAverageMark()}"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
+
 </main>
 
 <footer class="footer">
