fixed all recipes list look

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -75,18 +75,25 @@ body {
     border-radius: 50%;
 }
 
-.user-container:hover, .heart-container:hover {
+.user-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
 }
+
+.heart-container:hover {
+    background-color: #733506;
+    width: 4.6vw;
+    height: 9.2593vh;
+    cursor: not-allowed;
+}
+
 .home{
     height: 5.55555555vh;
     width: 3.125vw;
 }
 
 a:visited, a:link {
-    color: initial;
     text-decoration: none;
 }
 /*____________________________________________________________________________________________________________________*/
@@ -348,6 +355,10 @@ ul hr {
 .smallerField-down4{
     top: 76vh;
     bottom: 4vh;
+}
+
+table td {
+    padding-left: 3vw;
 }
 /*____________________________________________________________________________________________________________________*/
 .footer {
