--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <a th:href="@{/main.page}" href="main.html">
+        <a th:href="@{/}" href="main.html">
             <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
         </a>
 
