--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -36,7 +36,9 @@
         </div>
     </div>
 
-    <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
+    <a th:href="@{/}" href="main.html">
+        <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
+    </a>
 </div>
 
 </header>
