--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All recipes</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{css/recipe.css}">
+    <title th:text="${recipe.title}">Random</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/recipe.css" th:href="@{../css/recipe.css}">
 </head>
+<body>
 <header>
     <div class="header">
         <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
@@ -33,12 +34,12 @@
             </div>
         </div>
 
-        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
-        <a href = "main.html" th:href="@{images/home.svg}"></a>
+        <a th:href="@{/}" href="main.html">
+            <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
+        </a>
 
     </div>
 </header>
-<body>
 <main>
     <img alt="recipeIcon" class="recipeIcon" th:src="@{images/Recipe.svg}" src="../../static/images/Recipe.svg" >
     <div class = "RecipeTitle">
@@ -148,7 +149,7 @@
 <!--    <tr th:text="${comment.getUser().getId()}"></tr>-->
 <!--    <tr th:text="${comment.getText()}"></tr>-->
 <!--</table>-->
-</body>
+
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
@@ -185,4 +186,5 @@
     </div>
 </footer>
 <script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
+</body>
 </html>
