--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -1,10 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Main page</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="stylesheet" type="text/css" href="../../static/css/main.css" th:href="@{css/main.css}">
 </head>
 <body>
+<header>
+    <div class="header">
+        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
 
+
+        <form class="search-form">
+            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+            <input name="query" placeholder="Search" type="search">
+        </form>
+        <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
+        <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
+
+        <div class="heart-container">
+            <div class="heart"
+                 onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
+                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
+                <img id="heart-img" th:src="@{images/heart.svg}" src="../../images/heart.svg" alt="heart" class="heart">
+            </div>
+        </div>
+
+        <div class="user-container">
+            <div class="user"
+                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
+                 onmouseout="restoreImage('user-img', '../../images/user.svg')">
+
+                <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
+            </div>
+        </div>
+
+        <a th:href="@{/}" href="main.html">
+            <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
+        </a>
+    </div>
+
+</header>
+<main>
+    <div class="container">
+        <div class="menu">
+            <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+            <div class="ul">
+                <ul>
+                    <h1 class="h1">Categories</h1>
+                    <a th:href="@{/allRecipes(category= Soup )}">
+                        <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >
+                            First dishes</li>
+                    </a>
+                    <hr>
+                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
+                        Main dishes</li>
+                    <hr>
+                    <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
+                        Salads</li>
+                    <hr>
+                    <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
+                        Pastry</li>
+                    <hr>
+                    <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
+                        Desserts</li>
+                    <hr>
+                    <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
+                        Drinks</li>
+                    <hr>
+                    <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
+                        Snacks</li>
+                    <hr>
+                    <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
+                        Fish dishes</li>
+                    <hr>
+                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
+                        Sauces</li>
+                    <hr>
+                </ul>
+            </div>
+            <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
+        </div>
+
+        <div class="main-bottom">
+            <div class="dessert">
+                <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
+                <div class="rectangle rectangle-left-1">
+                    <img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" > Desserts
+                </div>
+            </div>
+
+            <div class="drink">
+                <img alt="fresh" class="fresh" th:src="@{images/drink.jpg}"  src="../../static/images/drink.jpg" >
+                <div class="rectangle rectangle-left-2">
+                    <img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >Drinks
+                </div>
+            </div>
+
+            <div class="salad">
+                <img alt="seafoodSalad" class="seafoodSalad" th:src="@{images/salad.jpg}" src="../../static/images/salad.jpg" >
+                <div class="rectangle rectangle-left-3">
+                    <img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" > Salads
+                </div>
+            </div>
+        </div>
+
+        <div class="firstD">
+            <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
+            <div class="rectangleFD rectangleFD-left">
+                <img alt="substance" class="substance" th:src="@{images/Soup.svg}" src="../../static/images/Soup.svg" > First dishes
+            </div>
+        </div>
+
+        <div class="mainD">
+            <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
+            <div class="rectangleMD rectangleMD-left">
+                <img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" > Main dishes
+            </div>
+        </div>
+
+    </div>
+</main>
+
+<footer class="footer">
+    <button class="support-button" id="support-btn"><span>Support</span></button>
+
+    <div id="overlay" onclick="hideOverlay()"></div>
+
+    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
+        <div class="inner-window">
+            <input name="query" placeholder="Enter feedback" type="search">
+        </div>
+
+        <button id="send-button">Send</button>
+    </div>
+
+    <div class="copyright">© Company policy and privacy rules</div>
+
+    <div class="circle-container telegram-container">
+        <div
+                class="telegram"
+                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+        >
+            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../images/telegram.svg" alt="telegram" class="telegram">
+        </div>
+    </div>
+
+    <div class="circle-container instagram-container">
+        <div
+                class="instagram"
+                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+        >
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" alt="instagram" class="instagram">
+        </div>
+    </div>
+</footer>
+<script th:href="@{js/scripts.js}" src="../../js/scripts.js"></script>
 </body>
 </html>
