--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -50,8 +50,12 @@
             <ul>
                 <h1 class="h1">Categories</h1>
                 <a th:href="@{/allRecipes(category= Soup )}">
-                <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >
-                    First dishes</li>
+                    <li>
+                        <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
+                        First dishes
+                    </li>
+<!--                <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >-->
+<!--                    First dishes</li>-->
                 </a>
                 <hr>
                 <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
