--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Main page</title>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link rel="stylesheet" type="text/css" href="../../static/css/main.css" th:href="@{css/main.css}">
+    <title>All recipes</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/allRecipes.css" th:href="@{css/allRecipes.css}">
 </head>
 <body>
 <header>
     <div class="header">
-        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
-
+        <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt = "logo" class = "logo">
 
         <form class="search-form">
             <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
@@ -40,88 +38,59 @@
             <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
         </a>
     </div>
-
 </header>
+
 <main>
-    <div class="container">
-        <div class="menu">
-            <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
-            <div class="ul">
-                <ul>
-                    <h1 class="h1">Categories</h1>
-                    <a th:href="@{/allRecipes(category=Soup)}">
-                        <li>
-                            <img alt="substance" class="substance" th:src="@{https://i.imgur.com/zphkXzb.png}" src="https://i.imgur.com/zphkXzb.png">
-                            First dishes
-                        </li>
-                    </a>
-                    <hr>
-                    <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >
-                        Main dishes</li>
-                    <hr>
-                    <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
-                        Salads</li>
-                    <hr>
-                    <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >
-                        Pastry</li>
-                    <hr>
-                    <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >
-                        Desserts</li>
-                    <hr>
-                    <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >
-                        Drinks</li>
-                    <hr>
-                    <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
-                        Snacks</li>
-                    <hr>
-                    <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >
-                        Fish dishes</li>
-                    <hr>
-                    <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >
-                        Sauces</li>
-                    <hr>
-                </ul>
-            </div>
-            <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
-        </div>
-
-        <div class="main-bottom">
-            <div class="dessert">
-                <img alt="cheesecake" class="cheesecake" th:src="@{images/dessert.jpg}" src="../../static/images/dessert.jpg" >
-                <div class="rectangle rectangle-left-1">
-                    <img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" > Desserts
-                </div>
-            </div>
-
-            <div class="drink">
-                <img alt="fresh" class="fresh" th:src="@{images/drink.jpg}"  src="../../static/images/drink.jpg" >
-                <div class="rectangle rectangle-left-2">
-                    <img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >Drinks
-                </div>
-            </div>
-
-            <div class="salad">
-                <img alt="seafoodSalad" class="seafoodSalad" th:src="@{images/salad.jpg}" src="../../static/images/salad.jpg" >
-                <div class="rectangle rectangle-left-3">
-                    <img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" > Salads
+    <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+    <button class="apply-button"><span>Apply</span></button>
+    <div class="ulBoard">
+        <ul>
+            <h1 class="h1">Filters</h1>
+            <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
+                Categories</li>
+            <hr>
+            <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
+                Time</li>
+            <hr>
+            <li><img alt="alphabetI" class="alphabetI" th:src="@{images/Alphabet.svg}" src="../../static/images/Alphabet.svg" >
+                Alphabet</li>
+            <hr>
+            <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
+                Rating</li>
+            <hr>
+            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
+                Ingredients</li>
+            <hr>
+            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
+                Devices</li>
+            <hr>
+            <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
+                Ingredients</li>
+            <hr>
+            <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
+                Devices</li>
+        </ul>
+    </div>
+    <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
+    <div class="mainField">
+        <div class="field" id="recipeContainer">
+            <div class="ol">
+                <div th:each="recipe, i : ${recipes}" th:class="'smallerField smallerField-down' + (${i.index} + 1)">
+                    <table>
+                        <tr>
+                            <th th:text="${recipe.getCategory().getTitle()}"></th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a th:href="@{/recipe/{id}(id=${recipe.getId()})}" th:text="${recipe.getTitle()}"></a>
+                            </td>
+                            <td th:text="${recipe.getCookingTime()} + ' minutes'"></td>
+                            <td th:text="${recipe.getAverageMark()}"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-
-        <div class="firstD">
-            <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
-            <div class="rectangleFD rectangleFD-left">
-                <img alt="substance" class="substance" th:src="@{images/Soup.svg}" src="../../static/images/Soup.svg" > First dishes
-            </div>
-        </div>
-
-        <div class="mainD">
-            <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
-            <div class="rectangleMD rectangleMD-left">
-                <img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" > Main dishes
-            </div>
-        </div>
-
     </div>
 </main>
 
@@ -156,7 +125,7 @@
                 onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
                 onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
         >
-            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" alt="instagram" class="instagram">
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" class="instagram">
         </div>
     </div>
 </footer>
