--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -14,8 +14,7 @@ body {
     padding-right: 2.083vw;
     padding-left: 4.166vw;
 }
-
-.logo {
+.logo1 {
     width: 6.25vw;
     height: 10vh;
     top: 0.3vw;
@@ -24,10 +23,10 @@ body {
 .search-form {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.53vw;
     padding-left: 1.0415vw;
     background: #FBEFC7;
-    border-radius: 30px;
+    border-radius: 2.778vh;
 }
 
 .search-form input, .inner-window input {
@@ -39,6 +38,7 @@ body {
     border: none;
     background: #FBEFC7;
     font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.5vh;
     font-size: 2.5vw;
     border-radius: 5.5vh;
     outline: none;
@@ -54,11 +54,12 @@ body {
     background-color: #3E5902;
     height: 5.7407vh;
     width: 6.4640625vw;
-    border-radius: 30px;
+    border-radius: 2.778vh;
     color: white;
     justify-content: center;
     align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.25vh;
     font-size: 1.25vw;
     text-decoration: none;
 }
@@ -75,26 +76,14 @@ body {
     border-radius: 50%;
 }
 
-.user-container:hover {
+.user-container:hover, .heart-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
 }
-
-.heart-container:hover {
-    background-color: #733506;
-    width: 4.6vw;
-    height: 9.2593vh;
-    cursor: not-allowed;
-}
-
 .home{
     height: 5.55555555vh;
     width: 3.125vw;
-}
-
-a:visited, a:link {
-    text-decoration: none;
 }
 /*____________________________________________________________________________________________________________________*/
 
@@ -110,33 +99,45 @@ a:visited, a:link {
     flex-direction: column;
     justify-content: flex-start;
     margin-left: 4vw;
-    margin-top: 1.852vh;
+    margin-top: 1vh;
     margin-right: 1.7vw;
 }
 
 .h1 {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.4vw; /*42*/
-    font-size: 3.8889vh;
+    font-size: 3.9vh;
     color: #733506;
     position: absolute;
-    margin-left: 3.4vw;
-    bottom: 0.2605vh;
-    margin-bottom: 34vh;
-    padding-bottom: 1vh;
+    margin-left: 5.4vw;
+    margin-top: 1vh;
+
+}
+
+.boardTwoTitle{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw; /*42*/
+    color: #733506;
+    width: 3vw;
+    height: 4vh;
+    margin-left: 6.1vw;
+    margin-top: 16.5vh;
+
 }
 
 .ulBoard {
     position: absolute;
-    top: 30vh;
-    height: 39vh;
+    top: 33.5vh;
+    height: 37vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
+    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
     padding-left: 0.2605vw;
-    margin-top: 1vh;
-    margin-left: 1.8vw;
+    margin-top: 0.1vh;
+    margin-left: 1.7vw;
 
 }
 
@@ -146,18 +147,20 @@ ul {
 }
 
 ul li {
+
     list-style: none;
     padding-left: 0.2605vw;
-    margin-left: 0.4vw;
-    margin-right: 0.7vw;
+    margin-left: 0.2vw;
+    margin-right: 2vw;
+    margin-top: 0.7vh;
 }
 
 ul li:hover {
     background-color: #F2B705;
     border-radius: 5.5vw;
     height: 5vh;
-    width: 8.7vw;
-}
+    width: 9vw;
+} /*hover for menu list elements*/
 
 ul hr {
     border: 0.104167vw solid black;
@@ -219,7 +222,44 @@ ul hr {
     width:1.5625vw;/*30*/
     height:2.78vh;/*30*/
 }
+/*____________________________________________________________________________________________________________________*/
 
+.DropDownIcon{
+    position: absolute;
+    width: 1.5vw;/*30*/
+    height:1.5vh;/*17*/
+    top: 4.5vh;
+    margin-left: 0.4vw;
+}
+.DropDownIconTime{
+    position: absolute;
+    top: 10.2vh;
+    margin-left: 9.4vw;
+}
+
+.DropDownIconAlphabet{
+    position: absolute;
+    top: 16vh;
+    margin-left: 9.4vw;
+}
+
+.DropDownIconRating{
+    position: absolute;
+    top: 21.7vh;
+    margin-left: 9.4vw;
+}
+
+.DropDownIconIngredients{
+    position: absolute;
+    top: 27.5vh;
+    margin-left: 9.4vw;
+}
+
+.DropDownIconDevices{
+    position: absolute;
+    top: 33.1vh;
+    margin-left: 9.4vw;
+}
 /*____________________________________________________________________________________________________________________*/
 
 .board{
@@ -247,7 +287,8 @@ ul hr {
     width: 8.4375vw;
     height: 4.2593vh;
     text-align: center;
-    font-family: 'Frank Ruhl Libre', serif;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 4.2593vh;
@@ -278,39 +319,47 @@ ul hr {
     top: 14.6vh;
     bottom: 8vh;
     border-radius: 5.5vh;
-    padding-left: 1.5vw;
     background-color: #F2E3B3;
 }
 
 .ol{
     position: absolute;
-    width: 79vw;
-    height: 74vh;
+    width: 80vw;
+    height: 76vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
+    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
+    padding-left: 0.2605vw;
+    margin-top: 1vh;
+    overflow: auto;
 }
-
 .ol ol {
     list-style-type: none;
 }
 
 .ol::-webkit-scrollbar {
     width: 0.78125vw;
+    margin-right: 5vw;
 }
 
 .ol::-webkit-scrollbar-track {
-    margin-top: 3vh;
+    margin-top: 2.7778vh;
     border: 0.0520834vw solid black;
     border-radius: 50px;
     background: #F2E3B3;
+    margin-left: 0.5vw;
 }
 
 .ol::-webkit-scrollbar-thumb {
     background: #733506;
     border-radius: 50px;
 }
+
+.ol-scrollbar{
+    position: absolute;
+    right: 5vw;}
 
 .h2{
     position: absolute;
@@ -355,10 +404,6 @@ ul hr {
 .smallerField-down4{
     top: 76vh;
     bottom: 4vh;
-}
-
-table td {
-    padding-left: 3vw;
 }
 /*____________________________________________________________________________________________________________________*/
 .footer {
@@ -518,7 +563,8 @@ table td {
     width: 21vw;
     height: 3vh;
     margin: auto;
-    font-family: 'Frank Ruhl Libre', serif;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 1vh;
@@ -527,4 +573,27 @@ table td {
 }
 
 
+.copyrightm {
+    position: absolute;
+    left: 240px;
+    bottom: -18px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 31px;
 
+    color: #000000;
+}
+
+.copyrightf {
+    position: absolute;
+    left: 410px;
+    bottom: -18px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 42px;
+    font-weight: 600;
+    line-height: 31px;
+    color: #000000;
+}
