--- a/src/main/resources/templates/user/test.html
+++ b/src/main/resources/templates/user/test.html
@@ -5,10 +5,10 @@
     <title>All recipes</title>
     <link rel="stylesheet" type="text/css" href="../../static/css/test.css" >
 </head>
-<body>
 <header>
     <div class="header">
-        <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt = "logo" class = "logo">
+        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
+
 
         <form class="search-form">
             <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
@@ -16,53 +16,63 @@
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
-
         <div class="heart-container">
             <div class="heart"
-                 onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')"
-                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')">
-                <img id="heart-img" th:src="@{images/heart.svg}" src="../../images/heart.svg" alt="heart" class="heart">
+                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
+                 onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
+                <img id="heart-img" th:src="@{images/heart.svg}" src="../../static/images/heart.svg" alt="heart" class="heart">
             </div>
         </div>
 
         <div class="user-container">
             <div class="user"
-                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
-                 onmouseout="restoreImage('user-img', '../../images/user.svg')">
+                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
+                 onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
 
-                <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
+                <img id="user-img" th:src="@{images/user.svg}" src="../../static/images/user.svg" alt="user" class="user">
             </div>
         </div>
 
         <a th:href="@{/}" href="main.html">
             <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
         </a>
+
+
     </div>
 </header>
+<body>
 
 <main>
+    <h1 class="boardTwoTitle">Filters</h1>
     <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
     <button class="apply-button"><span>Apply</span></button>
     <div class="ulBoard">
+        <div class="h1"></div>
         <ul>
-            <h1 class="h1">Filters</h1>
             <li><img alt="categoriesI" class="categoriesI" th:src="@{images/Categories.svg}"  src="../../static/images/Categories.svg" >
-                Categories</li>
+                Categories
+                <img alt="DropDownIcon" class="DropDownIcon" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
+            </li>
             <hr>
             <li><img alt="timeI" class="timeI" th:src="@{images/Time.svg}" src="../../static/images/Time.svg" >
                 Time</li>
+            <img alt="DropDownIconTime" class="DropDownIcon DropDownIconTime" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
             <hr>
             <li><img alt="alphabetI" class="alphabetI" th:src="@{images/Alphabet.svg}" src="../../static/images/Alphabet.svg" >
                 Alphabet</li>
+            <img alt="DropDownIconAlphabet" class="DropDownIcon DropDownIconAlphabet" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
             <hr>
             <li><img alt="ratingI" class="ratingI" th:src="@{images/Rating.svg}" src="../../static/images/Rating.svg" >
                 Rating</li>
+            <img alt="DropDownIconRating" class="DropDownIcon DropDownIconRating" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
             <hr>
             <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
                 Ingredients</li>
+            <img alt="DropDownIconIngredients" class="DropDownIcon DropDownIconIngredients" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
             <hr>
             <li><img alt="devicesI" class="devicesI" th:src="@{images/Mixer.svg}" src="../../static/images/Mixer.svg" >
                 Devices</li>
+            <img alt="DropDownIconDevices" class="DropDownIcon DropDownIconDevices" th:src="@{images/DropDownIcon.svg}"  src="../../static/images/DropDownIcon.svg" >
             <hr>
             <li><img alt="ingredientsI" class="ingredientsI" th:src="@{images/ingredients.svg}" src="../../static/images/ingredients.svg" >
                 Ingredients</li>
@@ -73,27 +83,41 @@
     </div>
     <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
     <div class="mainField">
-        <div class="field" id="recipeContainer">
+        <div class="field ">
             <div class="ol">
-                <div th:each="recipe, i : ${recipes}" th:class="'smallerField smallerField-down' + (${i.index} + 1)">
-                    <table>
-                        <tr>
-                            <th th:text="${recipe.getCategory().getTitle()}"></th>
-                        </tr>
-                        <tr>
-                            <td>
+                <ol>
+                    <li> <div class="smallerField">
+                        <!--                        <h2 class="h2">Title</h2>-->
+                        <table th:each="recipe: ${recipes}">
+                            <tr>
+                                <td th:text="${recipe.getCategory().getTitle()}"></td>
+                            </tr>
+
+                            <tr>
                                 <a th:href="@{/recipe/{id}(id=${recipe.getId()})}" th:text="${recipe.getTitle()}"></a>
-                            </td>
-                            <td th:text="${recipe.getCookingTime()} + ' minutes'"></td>
-                            <td th:text="${recipe.getAverageMark()}"></td>
-                        </tr>
-                    </table>
-                </div>
+                                <td th:text="${recipe.getCookingTime()}+' minutes'"></td>
+                            </tr>
+                            <tr>
+                                <td th:text="${recipe.getAverageMark()}">
+                                </td>
+                            </tr>
+                        </table>
+                        <!--                        <p class="h2-down"> Categories  </p>-->
+                        <!--                        <p class="h2-right">Time for cooking   </p>-->
+                        <!--                        <p class="h2-right"> 4.5</p>-->
+                    </div>
+                    </li>
+                    <li><div class="smallerField smallerField-down1 "></div></li>
+                    <li><div class="smallerField smallerField-down2 "></div></li>
+                    <li><div class="smallerField smallerField-down3 "></div></li>
+                    <li><div class="smallerField smallerField-down4 "></div></li>
+                </ol>
             </div>
         </div>
     </div>
 </main>
 
+</body>
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
@@ -112,23 +136,22 @@
     <div class="circle-container telegram-container">
         <div
                 class="telegram"
-                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
-                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
         >
-            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../images/telegram.svg" alt="telegram" class="telegram">
+            <img id="telegram-img" th:src="@{images/telegram.svg}"  src="../../static/images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
         <div
                 class="instagram"
-                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
-                onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
         >
-            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../images/inst.svg" class="instagram">
+            <img id="instagram-img" th:src="@{images/inst.svg}" src="../../static/images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
 </footer>
-<script th:href="@{js/scripts.js}" src="../../js/scripts.js"></script>
-</body>
+<script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
 </html>
